--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
 
   body
     p
-      = link_to t('layout.change_locale'), url_for(locale: I18n.locale == :ru ? :en : :ru)
+      = link_to t('layout.change_locale'), url_for(locale: I18n.locale == :ru ? :en : nil)
       | &nbsp
       = t('layout.name', user_name: current_user.name)
     = yield
