globals, mixins css config

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -1,11 +1,13 @@
-@mixin clearfix
-  &:after
-    content: "."
-    display: block
-    clear: both
-    visibility: hidden
-    line-height: 0
-    height: 0
+// fonts
+$font_base: 'PT Sans', sans-serif
+$font_condenced: 'PT Sans Narrow', sans-serif
 
-$base_font: 'PT Sans', sans-serif
-$condenced_font: 'PT Sans Narrow', sans-serif
+// colors
+$color_base: #000
+$color_light_1: #aaa
+$color_light_2: #bbb
+$color_light_3: #ccc
+$color_light_4: #eee
+
+body
+  font-size: 16px
