--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,18 +1,18 @@
 body
-  font-family: $base_font
+  font-family: $font_base
   margin: 0 auto
   width: 900px
 
 .header
   @include clearfix
-  border-bottom: 1px dotted #000
+  border-bottom: 1px solid $color_light_1
 
   h1
     float: left
     padding: 0
     margin: 0
     line-height: 1em
-    font-family: $condenced_font
+    font-family: $font_condenced
     text-transform: uppercase
     a
       text-decoration: none
@@ -26,12 +26,11 @@ body
     li
       float: left
       margin: 0.5em 0
-      padding: 0 5px
+      padding: 0 0.25em
       &:last-child
-        border-left: 1px solid #000
+        border-left: 1px solid $color_base
   .locale strong
     font-weight: bolder
-
 
 .content
   clear: both
