--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -8,6 +8,9 @@ $color_light_1: #aaa
 $color_light_2: #bbb
 $color_light_3: #ccc
 $color_light_4: #eee
+$color_light_5: #f1f1f1
+$color_light_6: #f5f5f5
+$color_light_7: #fafafa
 
 body
   font-size: 16px
