--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html[ ng-app='' ]
+html[ ng-app='resonanz' ]
   head
     title Resonanz
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,cyrillic'
