use named colors instead of numbers

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -2,15 +2,16 @@
 $font_base: 'PT Sans', sans-serif
 $font_condenced: 'PT Sans Narrow', sans-serif
 
-// colors
-$color_base: #000
-$color_light_1: #aaa
-$color_light_2: #bbb
-$color_light_3: #ccc
-$color_light_4: #eee
-$color_light_5: #f1f1f1
-$color_light_6: #f5f5f5
-$color_light_7: #fafafa
+$color_main: #000
+$color_main_light: #444
+$color_sub: #888
+$color_sub_light: #aaa
+
+$color_border: #bbb
+$color_border_light: #ddd
+
+$color_background: #f1f1f1
+$color_background_light: #fafafa
 
 body
   font-size: 16px
