--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -1,6 +1,6 @@
 body>header
   +clearfix
-  border-bottom: 1px solid $color_light_1
+  border-bottom: 1px solid $color_border
 
   h1
     float: left
@@ -23,6 +23,6 @@ body>header
       margin: 0.5em 0
       padding: 0 0.25em
       &:last-child
-        border-left: 1px solid $color_base
+        border-left: 1px solid $color_main
   .locale strong
     font-weight: bolder
