--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -13,5 +13,7 @@ $color_border_light: #ddd
 $color_background: #f1f1f1
 $color_background_light: #fafafa
 
+$color_disabled: #ccc
+
 body
   font-size: 16px
