style conversation window

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -15,5 +15,8 @@ $color_background_light: #fafafa
 
 $color_disabled: #ccc
 
+$font_size: 16px
+$px_1: 1em/16
+
 body
-  font-size: 16px
+  font-size: $font_size
