--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -16,7 +16,8 @@ $color_background_light: #fafafa
 $color_disabled: #ccc
 
 $font_size: 16px
-$px_1: 1em/16
+
+$fontAwesomePath: asset-path('assets/font-awesome/font')
 
 body
   font-size: $font_size
