--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -6,12 +6,19 @@ body>header
     float: left
     padding: 0
     margin: 0
+    margin-bottom: 1px
     line-height: 1em
     font-family: $font_condenced
     text-transform: uppercase
-    a
-      text-decoration: none
-      color: inherit
+  a.logo
+    text-decoration: none
+    color: inherit
+  span
+    height: 1em
+    display: inline-block
+    &.head
+      background-color: $color_main
+      color: #fff
   ul
     float: right
     list-style-type: none
