conversations list ui fixes

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -7,7 +7,7 @@ $color_main_light: #444
 $color_sub: #888
 $color_sub_light: #aaa
 
-$color_border: #bbb
+$color_border: #aaa
 $color_border_light: #ddd
 
 $color_background: #f1f1f1
