more ui arithmetic

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -1,6 +1,6 @@
 body>header
   +clearfix
-  border-bottom: 1px solid $color_border
+  border-bottom: $border_width solid $color_border
 
   h1
     float: left
@@ -30,6 +30,6 @@ body>header
       margin: 0.5em 0
       padding: 0 0.25em
       &:last-child
-        border-left: 1px solid $color_main
+        border-left: $border_width solid $color_main
   .locale strong
     font-weight: bolder
