--- a/app/assets/stylesheets/mixins.css.sass
+++ b/app/assets/stylesheets/mixins.css.sass
@@ -19,7 +19,7 @@
   cursor: pointer
   text-transform: uppercase
   font: $font_condenced
-  border: 1px solid $bk_color
+  border: $border_width solid $bk_color
   &:hover
     background-color: lighten($bk_color, 20%)
   &:active
