--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -17,6 +17,8 @@ $color_disabled: #ccc
 
 $font_size: 16px
 
+$border_width: 1em / 16
+
 $fontAwesomePath: asset-path('assets/font-awesome/font')
 
 body
