--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -6,7 +6,7 @@ body>header
     float: left
     padding: 0
     margin: 0
-    margin-bottom: 1px
+    margin-bottom: $border_width
     line-height: 1em
     font-family: $font_condenced
     text-transform: uppercase
