replace em with rem

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -17,9 +17,9 @@ $color_disabled: #ccc
 
 $font_size: 16px
 
-$border_width: 1em / 16
+$border_width: 1rem / 16
 
 $fontAwesomePath: asset-path('assets/font-awesome/font')
 
-body
+html
   font-size: $font_size
