--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -7,14 +7,13 @@ body>header
     padding: 0
     margin: 0
     margin-bottom: $border_width
-    line-height: 1em
+    line-height: 2rem
     font-family: $font_condenced
     text-transform: uppercase
   a.logo
     text-decoration: none
     color: inherit
   span
-    height: 1em
     display: inline-block
     &.head
       background-color: $color_main
@@ -24,11 +23,11 @@ body>header
     list-style-type: none
     padding: 0
     margin: 0
-    height: 2em
+    height: 2rem
     li
       float: left
-      margin: 0.5em 0
-      padding: 0 0.25em
+      margin: 0.5rem 0
+      padding: 0 0.25rem
       &:last-child
         border-left: $border_width solid $color_main
   .locale strong
