--- a/app/assets/stylesheets/mixins.css.sass
+++ b/app/assets/stylesheets/mixins.css.sass
@@ -12,10 +12,10 @@
   color: $text_color
   padding: 0
   border: none
-  font-size: 0.8em
-  line-height: 1.4em
-  padding: 0.1em 0.5em
-  margin: 0.5em
+  font-size: 0.8rem
+  line-height: 1.4rem
+  padding: 0.1rem 0.5rem
+  margin: 0.5rem
   cursor: pointer
   text-transform: uppercase
   font: $font_condenced
@@ -54,5 +54,5 @@
     top: 24px
     background-color: $color_main
     color: #fff
-    font-size: 1em
-    padding: 0.2em
+    font-size: 1rem
+    padding: 0.2rem
