--- a/app/assets/stylesheets/mixins.css.sass
+++ b/app/assets/stylesheets/mixins.css.sass
@@ -15,7 +15,7 @@
   font-size: 0.8rem
   line-height: 1.4rem
   padding: 0.1rem 0.5rem
-  margin: 0.5rem
+  margin: 0.2rem 0.5rem
   cursor: pointer
   text-transform: uppercase
   font: $font_condenced
