dialog window rework and restyling

--- a/app/assets/stylesheets/mixins.css.sass
+++ b/app/assets/stylesheets/mixins.css.sass
@@ -8,6 +8,7 @@
     height: 0
 
 @mixin button($bk_color, $text_color)
+  display: inline-block
   background-color: $bk_color
   color: $text_color
   padding: 0
