--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html[ ng-app='resonanz' ]
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic'
 
     = stylesheet_link_tag 'application'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js'
     = javascript_include_tag 'application'
     = yield(:head) if content_for?(:head)
     meta[name="language" content="#{I18n.locale}"]
