header styling fixes

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -24,11 +24,23 @@ body>header
     padding: 0
     margin: 0
     height: 2rem
+
     li
       float: left
-      margin: 0.5rem 0
-      padding: 0 0.25rem
-      &:last-child
+      margin: 0.5em 0
+      &:nth-child(n+2)
+        margin-left: 0.5em
+        padding-left: 0.5em
         border-left: $border_width solid $color_main
+
+    ul
+      height: 1.25rem
+      li
+        margin: 0
+        &:nth-child(n+2)
+          margin-left: 0.25em
+          padding-left: 0.25em
+          border-left: $border_width dotted $color_main
+
   .locale strong
     font-weight: bolder
