--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,15 +18,17 @@ html[ ng-app='resonanz' ]
           span.head re
           span sonanz
       ul
-        li.current-user
+        li
           = t('layout.name')
           | &nbsp
           strong= current_user.name
-        - [:ru, :en].each do |locale|
-          li.locale
-            - if I18n.locale == locale
-              strong= t(locale, scope: 'layout.change_locale')
-            - else
-              = link_to t(locale, scope: 'layout.change_locale'), url_for(locale: locale)
+        li
+          ul.locales
+            - [:ru, :en].each do |locale|
+              li
+                - if I18n.locale == locale
+                  strong= t(locale, scope: 'layout.change_locale')
+                - else
+                  = link_to t(locale, scope: 'layout.change_locale'), url_for(locale: locale)
     #main
       = content_for?(:main) ? yield(:main) : yield
