--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -1,6 +1,6 @@
 // fonts
-$font_base: 'PT Sans', sans-serif
-$font_condenced: 'PT Sans Narrow', sans-serif
+$font_base: Tahoma, Verdana, sans-serif
+$font_condenced: $font_base
 
 $color_main: #000
 $color_main_light: #444
@@ -15,11 +15,12 @@ $color_background_light: #fafafa
 
 $color_disabled: #ccc
 
-$font_size: 1em
+$font_size: 0.875em
 
-$border_width: 1rem / 16
+$border_width: 1rem / 14
 
 $fontAwesomePath: asset-path('assets/font-awesome/font')
 
 html
   font-size: $font_size
+  font-family: $font_base
