--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,8 +1,7 @@
 //= require normalize-css/normalize
+//= require font-awesome/sass/font-awesome
 
 @import globals
 @import mixins
-
-@import font-awesome/sass/font-awesome
 
 @import layout
