base css for code-edit-area

--- a/app/assets/stylesheets/globals.css.sass
+++ b/app/assets/stylesheets/globals.css.sass
@@ -1,6 +1,7 @@
 // fonts
 $font_base: Tahoma, Verdana, sans-serif
 $font_condenced: $font_base
+$font_monospace: 'Lucida Sans Typewriter', monospace
 
 $color_main: #000
 $color_main_light: #444
