--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -8,7 +8,7 @@ body>header
     margin: 0
     margin-bottom: $border_width
     line-height: 2rem
-    font-family: $font_condenced
+    font-family: $font_monospace
     text-transform: uppercase
   a.logo
     text-decoration: none
